--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Silky Mills&#58; Beef &#124; Beer &#124; Bourbon</title>
+    <title>Bourbon</title>
     <link rel="stylesheet" href="css/normalize.css">
     <link href="https://fonts.googleapis.com/css?family=Amatic+SC:700|Oswald|Diplomata" rel="stylesheet">
     <link rel="stylesheet" href="css/main.css">
